--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -15,8 +15,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/tv_app_name"
-            android:textColor="@color/colorPrimary"
             android:textAlignment="center"
+            android:textColor="@color/colorPrimary"
             android:textSize="48sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -75,18 +75,15 @@
             app:layout_constraintTop_toBottomOf="@id/activity_info_ll" />
 
         <TextView
-            android:id="@+id/activity_info_tv_github_link"
+            android:id="@+id/activity_info_tv_github"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:text="@string/tv_github"
+            android:textColor="@color/colorPrimary"
             android:textSize="16sp"
-            android:autoLink="web"
-            android:linksClickable="true"
-            android:textColorLink="@color/colorPrimary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/activity_info_tv_vcs"
-            android:text="@string/tv_github_link" />
+            app:layout_constraintTop_toBottomOf="@+id/activity_info_tv_vcs" />
 
         <TextView
             android:id="@+id/activity_info_tv_app_version"
@@ -96,7 +93,7 @@
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/activity_info_tv_github_link" />
+            app:layout_constraintTop_toBottomOf="@id/activity_info_tv_github" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
