--- a/app/src/main/res/layout/activity_person_list_view.xml
+++ b/app/src/main/res/layout/activity_person_list_view.xml
@@ -31,13 +31,13 @@
                 tools:text="Total Amount" />
 
             <ImageView
-                android:id="@+id/activity_person_list_iv_info"
+                android:id="@+id/activity_person_list_iv_settings"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
-                android:contentDescription="@string/iv_desc_info"
-                android:src="@drawable/ic_info"
+                android:contentDescription="@string/iv_desc_settings"
+                android:src="@drawable/ic_settings"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
