--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/activity_info_tv_app_name"
+            android:id="@+id/fragment_info_tv_app_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/tv_app_name"
@@ -23,16 +23,16 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
-            android:id="@+id/activity_info_ll"
+            android:id="@+id/fragment_info_ll"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/activity_info_tv_app_name">
+            app:layout_constraintTop_toBottomOf="@id/fragment_info_tv_app_name">
 
             <TextView
-                android:id="@+id/activity_info_tv_created"
+                android:id="@+id/fragment_info_tv_created"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginEnd="10dp"
@@ -46,14 +46,14 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/activity_info_tv_author"
+                    android:id="@+id/fragment_info_tv_author"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/tv_created_in"
                     android:textSize="12sp" />
 
                 <TextView
-                    android:id="@+id/activity_info_tv_created_by"
+                    android:id="@+id/fragment_info_tv_created_by"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/tv_created_by"
@@ -64,7 +64,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/activity_info_tv_vcs"
+            android:id="@+id/fragment_info_tv_vcs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -72,10 +72,10 @@
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/activity_info_ll" />
+            app:layout_constraintTop_toBottomOf="@id/fragment_info_ll" />
 
         <TextView
-            android:id="@+id/activity_info_tv_github"
+            android:id="@+id/fragment_info_tv_github"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/tv_github"
@@ -83,17 +83,17 @@
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/activity_info_tv_vcs" />
+            app:layout_constraintTop_toBottomOf="@+id/fragment_info_tv_vcs" />
 
         <TextView
-            android:id="@+id/activity_info_tv_app_version"
+            android:id="@+id/fragment_info_tv_app_version"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/tv_app_version"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/activity_info_tv_github" />
+            app:layout_constraintTop_toBottomOf="@id/fragment_info_tv_github" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
