--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="colorGray">#DFDFDF</color>
     <color name="colorLightGray">#E2E2E2</color>
     <color name="colorRed">#F44336</color>
+    <color name="colorWhite">#FFFFFF</color>
     <color name="colorGreen">#5DCF61</color>
     <color name="colorBlue">#2196F3</color>
 </resources>
