--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -85,15 +85,35 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/fragment_info_tv_vcs" />
 
-        <TextView
-            android:id="@+id/fragment_info_tv_app_version"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/tv_app_version"
-            android:textSize="12sp"
+            android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/fragment_info_tv_github" />
+            app:layout_constraintTop_toBottomOf="@id/fragment_info_tv_github">
+
+            <TextView
+                android:id="@+id/fragment_info_tv_version"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tv_version"
+                android:textSize="12sp"
+                app:layout_constraintEnd_toStartOf="@id/fragment_info_tv_app_version"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/fragment_info_tv_github" />
+
+            <TextView
+                android:id="@+id/fragment_info_tv_app_version"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tv_app_version"
+                android:textSize="12sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/fragment_info_tv_version"
+                app:layout_constraintTop_toBottomOf="@id/fragment_info_tv_github" />
+
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
