--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,5 +19,5 @@
     <color name="colorRed">#F44336</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorGreen">#5DCF61</color>
-    <color name="colorBlue">#2196F3</color>
+    <color name="colorBlue">#1483DC</color>
 </resources>
